講習の検索処理のガワを実装
